--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
         default: ""
     docker:
       - image: "circleci/golang:<< parameters.version >>"
+        auth:
+          - username: oliverdaff
+          - password: $DOCKERHUB_PASSWORD
     working_directory: /go/src/github.com/oliverdaff/trie
     environment:
       GO111MODULE: "on"
@@ -65,6 +68,8 @@ workflows:
   tests:
     jobs:
       - test:
+          context:
+            - docker-hub-creds
           matrix:
             parameters:
               version: ["latest", "1.15", "1.14", "1.13", "1.12", "1.11"]
